# wasm-component-layer-example

./: Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  protocol.wit
.github/workflows/: ci.yml
guest/: Cargo.toml
guest/src/: lib.rs
host/: Cargo.toml  index.html
host/src/: lib.rs  main.rs
