[package]
name = "host"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wasm_component_layer = "0.1.17"
wasm_runtime_layer = "0.4.0"
wasmi_runtime_layer = "0.31.0"

[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.41"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
